# turboquant

./: .gitignore  README.md  README_EN.md  benchmark.py  fuzzer.py  maturin.toml  pyproject.toml  turboquant.py  turboquant_llm.py  turboquant_mixed.py  turboquant_numba.py  turboquant_sparse.py
.github/workflows/: ci.yml  publish.yml
docs/: tutorial.ipynb
rust/: Cargo.toml
rust/benches/: benchmarks.rs
rust/src/: lib.rs  lloyd.rs  main.rs  mse.rs  prod.rs  qjl.rs
src/turboquant_rs/: __init__.py
tests/: test_property_based.py  test_turboquant.py
